--- a/package.json
+++ b/package.json
@@ -16,10 +16,6 @@
     "postinstall": ""
   },
   "private": true,
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
-  },
   "dependencies": {
     "@agm/core": "^1.0.0",
     "@angular/cli": "^8.3.7",
@@ -28,7 +24,6 @@
     "@angular/compiler-cli": "^8.2.9",
     "@angular/core": "^8.2.9",
     "@angular/forms": "^8.2.9",
-    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^8.2.9",
     "@angular/platform-browser-dynamic": "^8.2.9",
     "@angular/router": "^8.2.9",
@@ -49,7 +44,16 @@
     "protractor": "^5.4.2",
     "save": "^2.4.0",
     "ts-node": "^8.4.1",
+    "tslib": "^1.10.0",
     "tslint": "^5.20.0",
     "typescript": "^3.4.5"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.7",
+    "codelyzer": "^5.0.1"
   }
 }
