--- a/package.json
+++ b/package.json
@@ -17,21 +17,67 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0",
     "@angular/cli": "^8.3.7",
     "@angular/common": "^8.2.9",
     "@angular/compiler": "^8.2.9",
     "@angular/compiler-cli": "^8.2.9",
     "@angular/core": "^8.2.9",
     "@angular/forms": "^8.2.9",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^8.2.9",
     "@angular/platform-browser-dynamic": "^8.2.9",
     "@angular/router": "^8.2.9",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.0.2",
+    "@types/file-saver": "^2.0.1",
+    "@types/jszip": "^3.1.6",
+    "@types/xlsx": "0.0.36",
+    "angular-2-local-storage": "^3.0.2",
+    "angular2-autosize": "^1.0.2",
+    "angular2-qrcode": "^2.0.3",
+    "angular2-text-mask": "^9.0.0",
+    "async": "^3.1.0",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^3.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "file-saver": "^2.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "jszip": "^3.2.2",
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-img-cropper": "^0.9.0",
+    "ngx-bootstrap": "^5.1.2",
+    "nodemailer": "^6.3.0",
+    "pg": "^7.12.1",
+    "pg-format": "^1.0.4",
+    "pg-transaction": "^1.0.4",
+    "pnotify": "^4.0.0",
+    "pug": "^2.0.4",
+    "randomstring": "^1.1.5",
+    "rxjs": "^6.5.3",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "supervisor": "^0.12.0",
+    "swagger-jsdoc": "^3.4.0",
+    "ts-xlsx": "0.0.11",
+    "xlsx": "^0.15.1",
+    "xlsx-populate": "^1.20.1",
+    "zone.js": "^0.10.2"
+  },
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
+  },
+  "devDependencies": {
     "@types/jasmine": "^3.4.2",
-    "@types/node": "^12.7.9",
+    "@types/node": "^12.7.10",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "^5.1.2",
     "jasmine-core": "^3.5.0",
@@ -41,19 +87,10 @@
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "save": "^2.4.0",
     "ts-node": "^8.4.1",
-    "tslib": "^1.10.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.4.5"
-  },
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.7",
-    "codelyzer": "^5.0.1"
+    "typescript": "^3.5.3"
   }
 }
