change systax of some method because of upgrade version of package

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "qa2": "cross-env NODE_ENV=qa2 & node ./bin/www",
     "prod": "cross-env NODE_ENV=production & node ./bin/www",
     "client": "ng serve",
-    "server": "supervisor ./bin/www",
+    "serve": "supervisor ./bin/www",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -17,6 +17,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.803.8",
+    "@angular/animations": "^8.2.9",
     "@angular/cli": "^8.3.7",
     "@angular/common": "^8.2.9",
     "@angular/compiler": "^8.2.9",
@@ -44,6 +46,7 @@
     "cookie-parser": "^1.4.4",
     "core-js": "^3.2.1",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -61,6 +64,7 @@
     "pug": "^2.0.4",
     "randomstring": "^1.1.5",
     "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
